# Monoid-Group

./: LICENSE  README.md
Graph_Neural_Network/: README.md
Graph_Neural_Network/DeepWalk/: DeepWalk_model.py  RandomWalk.tex  __init__.py
Machine_Learning/: Machine_Learning.md
Recommendations/: Layer_Model.py  Recommendations_Data_Load.py  Recommendations_TT.py  __init__.py
Recommendations/Attention_Factorization_Machines/: Attention_Factorization_Machines_Model.py  __init__.py
Recommendations/DeepFM/: DeepFM_Model.py  DeepFM_TT.py  __init__.py
Recommendations/Deep_Cross_Network/: Deep_Cross_Network_Model.py  __init__.py
Recommendations/Factorization_Machines/: FM.py  Factorization_Machines.tex  Factorization_Machines_Data_Load.py  Factorization_Machines_TT.py  Factorization_Machines_model.py  __init__.py
Recommendations/Factorization_Machines/Titanic-data/: Titanic_data.md
Recommendations/Field_aware_Factorization_Machines/: Field_aware_Factorization_Machines_Model.py  Field_aware_Factorization_Machines_TT.py  __init__.py
Recommendations/Neural_Factorization_Machines/: Neural_Factorization_Machines_Model.py  __init__.py
algorithms/: CMakeLists.txt  README.md  main.cpp
algorithms/C1-Basic-concepts/: algorithm-1.1.cpp  algorithm-1.1.h  mathematical_preliminaries_1_2.cpp  mathematical_preliminaries_1_2.h
algorithms/cpp/: CMakeLists.txt  Ssort.cpp  Ssort.h  main.cpp  utils.cpp  utils.h
algorithms/python/: 0519.py  utils.py
algorithms/python/Ssort/: Ssort.py  __init__.py  exercise_2.py
utils/: Confusion_Matrix.py  README.md  __init__.py
(+7 files in other folders)
